# airehealth-ai-service

./: .env.example  .gitignore  README.md  ecosystem.config.js  main.py  pyproject.toml  requirements.txt
app/: config.py
app/graph/: nodes.py  pipeline.py  state.py
app/models/: database.py  schemas.py
app/prompts/: clinical_note.py
app/services/: smart_phrases.py  transcript.py
